cilium/egress/hubble-relay-to-cilium-agent.yaml
# Hubble relay access to local cilium agents
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-relay.egress.to.local.cilium-agent
  namespace: cilium-ns
spec:
  endpointSelector:
    matchLabels:
      k8s:k8s-app: hubble-relay
  egress:
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
